{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 26,
  "lineage": "9b4ac7ac-df51-b734-9dd2-ac437dde6cdd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06617608ff5eba957",
            "arn": "arn:aws:ec2:ap-south-2:236182042746:elastic-ip/eipalloc-06617608ff5eba957",
            "association_id": "eipassoc-0666d3b29f51b0959",
            "domain": "vpc",
            "id": "eipalloc-06617608ff5eba957",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-09b1b4a4a83ea3326",
            "private_dns": "ip-10-0-0-165.ap-south-2.compute.internal",
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-16-113-18-66.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.113.18.66",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2",
            "tags": {
              "Name": "terraform-elastic-ip"
            },
            "tags_all": {
              "Name": "terraform-elastic-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "eipalloc-06617608ff5eba957",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:internet-gateway/igw-0ffc8b9ca418f8d6a",
            "id": "igw-0ffc8b9ca418f8d6a",
            "owner_id": "236182042746",
            "region": "ap-south-2",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "igw-0ffc8b9ca418f8d6a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:loadbalancer/app/terraform-application-alb/5fd98c31482d16f1",
            "arn_suffix": "app/terraform-application-alb/5fd98c31482d16f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-application-alb-2145881923.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:loadbalancer/app/terraform-application-alb/5fd98c31482d16f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-application-alb",
            "preserve_host_header": false,
            "region": "ap-south-2",
            "security_groups": [
              "sg-0a0358bc56198f0ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0393b5b8e2f827732"
              },
              {
                "subnet_id": "subnet-0fa4273cff4c528a0"
              }
            ],
            "subnets": [
              "subnet-0393b5b8e2f827732",
              "subnet-0fa4273cff4c528a0"
            ],
            "tags": {
              "Name": "terraform-application-alb"
            },
            "tags_all": {
              "Name": "terraform-application-alb"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:loadbalancer/app/terraform-application-alb/5fd98c31482d16f1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public-sn-1",
            "aws_subnet.public-sn-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:listener/app/terraform-application-alb/5fd98c31482d16f1/0e1943342388adc3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:targetgroup/terraform-app-target-group/5bffff6d5e72a025",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:listener/app/terraform-application-alb/5fd98c31482d16f1/0e1943342388adc3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:loadbalancer/app/terraform-application-alb/5fd98c31482d16f1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:listener/app/terraform-application-alb/5fd98c31482d16f1/0e1943342388adc3"
          },
          "dependencies": [
            "aws_lb.application",
            "aws_lb_target_group.application",
            "aws_security_group.alb",
            "aws_subnet.public-sn-1",
            "aws_subnet.public-sn-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:targetgroup/terraform-app-target-group/5bffff6d5e72a025",
            "arn_suffix": "targetgroup/terraform-app-target-group/5bffff6d5e72a025",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:targetgroup/terraform-app-target-group/5bffff6d5e72a025",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:236182042746:loadbalancer/app/terraform-application-alb/5fd98c31482d16f1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:236182042746:targetgroup/terraform-app-target-group/5bffff6d5e72a025"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06617608ff5eba957",
            "association_id": "eipassoc-0666d3b29f51b0959",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f4391f4aedf866c0",
            "network_interface_id": "eni-09b1b4a4a83ea3326",
            "private_ip": "10.0.0.165",
            "public_ip": "16.113.18.66",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0393b5b8e2f827732",
            "tags": {
              "Name": "terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-nat-gateway"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "nat-0f4391f4aedf866c0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.public-sn-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:route-table/rtb-06747320dd0cc3cd2",
            "id": "rtb-06747320dd0cc3cd2",
            "owner_id": "236182042746",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f4391f4aedf866c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtb-06747320dd0cc3cd2",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.terraform-nat-gateway",
            "aws_subnet.public-sn-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:route-table/rtb-089b18c14b656df03",
            "id": "rtb-089b18c14b656df03",
            "owner_id": "236182042746",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffc8b9ca418f8d6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtb-089b18c14b656df03",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ce3a2d3eb38f49",
            "region": "ap-south-2",
            "route_table_id": "rtb-06747320dd0cc3cd2",
            "subnet_id": "subnet-0c416dd46c73d62f9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtbassoc-0d1ce3a2d3eb38f49",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.terraform-nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-sn-1",
            "aws_subnet.public-sn-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f9d8a4945a6e2f",
            "region": "ap-south-2",
            "route_table_id": "rtb-06747320dd0cc3cd2",
            "subnet_id": "subnet-0510b9554987d606f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtbassoc-0d1f9d8a4945a6e2f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.terraform-nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-sn-2",
            "aws_subnet.public-sn-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e93640c9ee0156e",
            "region": "ap-south-2",
            "route_table_id": "rtb-089b18c14b656df03",
            "subnet_id": "subnet-0393b5b8e2f827732"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtbassoc-04e93640c9ee0156e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-sn-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046d2a94d83b6b6e2",
            "region": "ap-south-2",
            "route_table_id": "rtb-089b18c14b656df03",
            "subnet_id": "subnet-0fa4273cff4c528a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "rtbassoc-046d2a94d83b6b6e2",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-sn-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:security-group/sg-0a0358bc56198f0ca",
            "description": "Allows public HTTP traffic to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0358bc56198f0ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-alb-sg",
            "name_prefix": "",
            "owner_id": "236182042746",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-alb-sg"
            },
            "tags_all": {
              "Name": "terraform-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "sg-0a0358bc56198f0ca",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:security-group/sg-0e49b27476bfc83f0",
            "description": "Allows HTTP only from the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e49b27476bfc83f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0358bc56198f0ca"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-asg-instances-sg",
            "name_prefix": "",
            "owner_id": "236182042746",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-asg-instances-sg"
            },
            "tags_all": {
              "Name": "terraform-asg-instances-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "sg-0e49b27476bfc83f0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:subnet/subnet-0c416dd46c73d62f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c416dd46c73d62f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236182042746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "2a-private-sn"
            },
            "tags_all": {
              "Name": "2a-private-sn"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "subnet-0c416dd46c73d62f9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sn-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:subnet/subnet-0510b9554987d606f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0510b9554987d606f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236182042746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "2b-private-sn"
            },
            "tags_all": {
              "Name": "2b-private-sn"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "subnet-0510b9554987d606f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:subnet/subnet-0393b5b8e2f827732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393b5b8e2f827732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236182042746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "2a-public-sn"
            },
            "tags_all": {
              "Name": "2a-public-sn"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "subnet-0393b5b8e2f827732",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sn-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:subnet/subnet-0fa4273cff4c528a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa4273cff4c528a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236182042746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "2b-public-sn"
            },
            "tags_all": {
              "Name": "2b-public-sn"
            },
            "vpc_id": "vpc-022aaf613d65dcfcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "subnet-0fa4273cff4c528a0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:236182042746:vpc/vpc-022aaf613d65dcfcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba5d493b8bda8214",
            "default_route_table_id": "rtb-0b5dace49c786fd1b",
            "default_security_group_id": "sg-077695e76be91fd6b",
            "dhcp_options_id": "dopt-0cf88a480d40d96f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022aaf613d65dcfcf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5dace49c786fd1b",
            "owner_id": "236182042746",
            "region": "ap-south-2",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236182042746",
            "id": "vpc-022aaf613d65dcfcf",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}